# commander-sfz

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: instrument.cpp.76B7216F8AA32C5E.idx  instrument.cpp.B372D9DE7AB0484B.idx  instrument.hpp.1943B3D21474147E.idx  instrument.hpp.B87535D50A6AA8A3.idx  main.cpp.C4F8E6B7763C4482.idx  main.cpp.CCD6F7C4582834CF.idx
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
Debug/.cmake/api/v1/reply/: codemodel-v2-cf211b7a0928d5de8706.json  index-2023-12-16T22-26-07-0434.json  target-Commander-SFZ-Debug-2c7d264ffcb8e8887d89.json
src/: main.cpp
src/data/: database.hpp
src/instrument/: instrument.hpp
